--- a/bittr/Base.lproj/Main.storyboard
+++ b/bittr/Base.lproj/Main.storyboard
@@ -8659,10 +8659,104 @@
                     <view key="view" contentMode="scaleToFill" id="Ncw-nW-A2H">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="93b-36-oNo">
+                                <rect key="frame" x="0.0" y="58" width="393" height="725"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZ3-Pg-quu">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="725"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RQZ-9s-ZCh">
+                                                <rect key="frame" x="0.0" y="362.66666666666669" width="393" height="0.0"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" id="E9J-hq-uUP"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="RQZ-9s-ZCh" firstAttribute="leading" secondItem="yZ3-Pg-quu" secondAttribute="leading" id="3C9-tn-y6a"/>
+                                            <constraint firstItem="RQZ-9s-ZCh" firstAttribute="centerY" secondItem="yZ3-Pg-quu" secondAttribute="centerY" id="Gqa-sC-OVt"/>
+                                            <constraint firstAttribute="trailing" secondItem="RQZ-9s-ZCh" secondAttribute="trailing" id="h3p-nI-n58"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="yZ3-Pg-quu" secondAttribute="trailing" id="58R-W3-l20"/>
+                                    <constraint firstItem="yZ3-Pg-quu" firstAttribute="width" secondItem="93b-36-oNo" secondAttribute="width" id="MGJ-wO-nVV"/>
+                                    <constraint firstAttribute="bottom" secondItem="yZ3-Pg-quu" secondAttribute="bottom" id="Th1-Mr-1Zk"/>
+                                    <constraint firstItem="yZ3-Pg-quu" firstAttribute="leading" secondItem="93b-36-oNo" secondAttribute="leading" id="nqf-eS-cFa"/>
+                                    <constraint firstItem="yZ3-Pg-quu" firstAttribute="height" secondItem="93b-36-oNo" secondAttribute="height" id="oRk-eM-fB1"/>
+                                    <constraint firstItem="yZ3-Pg-quu" firstAttribute="top" secondItem="93b-36-oNo" secondAttribute="top" id="z4x-pz-aBn"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="4hM-X7-ABY"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="er2-Vu-bRL"/>
+                            </scrollView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3k-ik-NZ9">
+                                <rect key="frame" x="48" y="29" width="2" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="2" id="Fqn-Nl-MCH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="2" id="X5j-oj-c9a"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconacademy" translatesAutoresizingMaskIntoConstraints="NO" id="5rm-qG-Y3q">
+                                <rect key="frame" x="20" y="20" width="18" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="18" id="D7h-Wd-Ore"/>
+                                    <constraint firstAttribute="height" constant="18" id="juk-FF-hVu"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow32" translatesAutoresizingMaskIntoConstraints="NO" id="N5A-ea-0lY">
+                                <rect key="frame" x="353" y="19" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="EDh-uz-5TA"/>
+                                    <constraint firstAttribute="height" constant="20" id="Klb-Hp-Oda"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XuN-Hk-OaA">
+                                <rect key="frame" x="343" y="9" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="bao-az-jfU"/>
+                                    <constraint firstAttribute="height" constant="40" id="h07-BZ-rAd"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="downTapped:" destination="iQY-qX-rYy" eventType="touchUpInside" id="7bx-p6-BDA"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="e4J-B5-D98"/>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.78039215689999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="N5A-ea-0lY" firstAttribute="centerY" secondItem="5rm-qG-Y3q" secondAttribute="centerY" id="1Uy-8j-Tx4"/>
+                            <constraint firstAttribute="trailing" secondItem="93b-36-oNo" secondAttribute="trailing" id="BAU-Zg-Jt6"/>
+                            <constraint firstItem="XuN-Hk-OaA" firstAttribute="centerX" secondItem="N5A-ea-0lY" secondAttribute="centerX" id="Gwm-vn-z39"/>
+                            <constraint firstItem="5rm-qG-Y3q" firstAttribute="top" secondItem="Ncw-nW-A2H" secondAttribute="top" constant="20" id="Hz0-V6-4VT"/>
+                            <constraint firstItem="5rm-qG-Y3q" firstAttribute="leading" secondItem="Ncw-nW-A2H" secondAttribute="leading" constant="20" id="ONS-qG-E19"/>
+                            <constraint firstItem="c3k-ik-NZ9" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="N5A-ea-0lY" secondAttribute="leading" constant="-20" id="R97-mD-tmV"/>
+                            <constraint firstItem="93b-36-oNo" firstAttribute="bottom" secondItem="e4J-B5-D98" secondAttribute="bottom" id="TKF-wn-s1H"/>
+                            <constraint firstItem="93b-36-oNo" firstAttribute="leading" secondItem="Ncw-nW-A2H" secondAttribute="leading" id="WXJ-en-W9B"/>
+                            <constraint firstItem="XuN-Hk-OaA" firstAttribute="centerY" secondItem="N5A-ea-0lY" secondAttribute="centerY" id="hIt-Vd-Jak"/>
+                            <constraint firstItem="c3k-ik-NZ9" firstAttribute="leading" secondItem="5rm-qG-Y3q" secondAttribute="trailing" constant="10" id="lYA-Gb-Ibj"/>
+                            <constraint firstAttribute="trailing" secondItem="N5A-ea-0lY" secondAttribute="trailing" constant="20" id="ogk-2D-ehA"/>
+                            <constraint firstItem="93b-36-oNo" firstAttribute="top" secondItem="5rm-qG-Y3q" secondAttribute="bottom" constant="20" id="rQP-ZC-pT7"/>
+                            <constraint firstItem="c3k-ik-NZ9" firstAttribute="centerY" secondItem="5rm-qG-Y3q" secondAttribute="centerY" constant="1" id="zvd-rM-9xX"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="20W-Xy-y5g"/>
+                    <connections>
+                        <outlet property="centerView" destination="RQZ-9s-ZCh" id="lMH-YK-ZR5"/>
+                        <outlet property="downButton" destination="XuN-Hk-OaA" id="q85-MP-efh"/>
+                        <outlet property="headerLabel" destination="c3k-ik-NZ9" id="1W7-eT-huc"/>
+                        <outlet property="mainContentView" destination="yZ3-Pg-quu" id="Nzg-9h-2uO"/>
+                        <outlet property="mainContentViewHeight" destination="oRk-eM-fB1" id="1OX-qi-KTd"/>
+                        <outlet property="mainScrollView" destination="93b-36-oNo" id="07x-nP-pRx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIA-eF-ZKA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
